--- a/Divers.html
+++ b/Divers.html
@@ -76,10 +76,7 @@
     </nav>
 
 
-    <div class="container-fluid" style="background-image: url(img/bg/at_2.jpg); -webkit-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);" 
->
+    <div class="container-fluid bg_1">
 
 
         <div class="menuleft">
